fix: complete MNC audit remediation